test/errors/js_errors2.js

module.exports = ({}, arg0) => {
    return arg0 + arg1; // arg1 undeclared
}
